# pokemon-popularity-contest

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py  utils.py
