[project]
name = "pokemon-popularity-contest"
version = "1.0.0"
description = "A Streamlit app to determine the most popular Pokémon based on user votes."
authors = [
    {name = "Zach Ip",email = "ip.zachary.t@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
license = {text = "MIT"}
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "supabase (>=2.15.1,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
